# CoolCooler

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  coolcooler.desktop  install-udev-rules.sh  lcd.py
.claude/: settings.local.json
crates/coolcooler-cli/: Cargo.toml
crates/coolcooler-cli/src/: main.rs
crates/coolcooler-core/: Cargo.toml
crates/coolcooler-core/src/: device.rs  error.rs  frame.rs  lib.rs  types.rs
crates/coolcooler-driver/: Cargo.toml
crates/coolcooler-driver/src/: detect.rs  display_loop.rs  lib.rs
crates/coolcooler-driver/tests/: liquidctl_integration.rs
crates/coolcooler-gui/: Cargo.toml
crates/coolcooler-gui/src/: canvas.rs  main.rs  preset.rs  tray.rs
crates/coolcooler-gui/src/widget/: clock.rs  date.rs  fonts.rs  mod.rs  static_widgets.rs  sysinfo_backend.rs  sysinfo_widgets.rs
crates/coolcooler-idcooling/: Cargo.toml
crates/coolcooler-idcooling/src/: device.rs  lib.rs  protocol.rs
crates/coolcooler-liquidctl/: Cargo.toml
crates/coolcooler-liquidctl/src/: driver.rs  lib.rs
packaging/appimage/: build-appimage-in-distrobox.sh  build-appimage.sh  coolcooler.desktop
