[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"

# opt-level 1 for dev builds: needed for image/media processing to be usable.
# opt-level 2 for dependencies: they benefit from full optimization.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
