[package]
name = "coolcooler-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "coolcooler"
path = "src/main.rs"

[dependencies]
coolcooler-core = { path = "../coolcooler-core" }
coolcooler-driver = { path = "../coolcooler-driver" }
coolcooler-liquidctl = { path = "../coolcooler-liquidctl" }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
ctrlc = "3"
