[package]
name = "coolcooler-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
coolcooler-core = { path = "../coolcooler-core" }
coolcooler-idcooling = { path = "../coolcooler-idcooling" }
coolcooler-liquidctl = { path = "../coolcooler-liquidctl" }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-static-libusb"] }

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2", default-features = false }
