[package]
name = "coolcooler-gui"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "coolcooler-gui"
path = "src/main.rs"

[dependencies]
coolcooler-core = { path = "../coolcooler-core" }
coolcooler-driver = { path = "../coolcooler-driver" }
iced = { version = "0.14", features = ["image", "tokio"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "webp"] }
fast_image_resize = "5"
ab_glyph = "0.2"
imageproc = "0.25"
chrono = "0.4"
sysinfo = "0.34"
nvml-wrapper = "0.12"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.21"
